iotsa 2.3 - in progress

- Added BLE support (esp32 only): iotsa devices can now be a Bluetooth LE server

iotsa 2.2 - 03-Dec-2019

- Updated to PlatformIO 4
- newer version of esp8266 and esp32 Arduino frameworks
- new ArduinoJson API
- Rationalized PlatformIO/Arduino support
- Backups and file listing implemented on esp32

iotsa 2.1 - 02-Jun-2019

- Got rid of default password, it provides no extra security.
- Allow uploading of certificate/key as DER with POST requests.
- Write-only REST attributes now always have a "has_" boolean in the read interface to signal that they exist and are set.
- REST read interface was made more consistent.

iotsa 2.0.1 - 01-Jul-2018

- Various changes to make https (server side) more usable, such as
  interfacing to the Igor Certificate Authority, and forwarding http
  requests to https. Added some scripts to help create certificates.
- Bug fixes for some security issues (which allowed config changes when not in config mode)

iotsa 2.0 - 31-May-2018

- The API has changed in an incompatible way: you no longer need to create the IotsaWebServer object
  yourself. The IotsaApplication constructor does this, if needed.
- The server by-reference instance variable of application and module objects is now a pointer.
- There are a number of compile-time flags in iotsaBuildOptions.h that enable and disable
  various features such as REST api access, normal web access and more.
- COAP is supported (as an alternative to, or in addition to, REST access).
- HTTPS is supported, as an alternative to HTTP.

iotsa 1.8.1 - 25-May-2018

- Fixed issue with platformio not finding ESP8266HttpClient.h

iotsa 1.8 - 15-Apr-2018

- IotsaRequest and IotsaButton modules added.

iotsa 1.7.2 - 8-Apr-2018

- Enabled (experimental) esp32 support again.
- Various fixes to iotsaControl and how it interfaces to iotsa boards

iotsa 1.7.1 - 30-Mar-2018

- Added iotsaControl module and program to allow programmatic configuration of iotsa devices.