@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = lolin32-example-led
+default_envs = lolin32-example-bleled-nowifi
 
 [env]
 framework = arduino
@@ -55,6 +55,12 @@ platform = espressif8266@>=2.2
 board = nodemcuv2
 src_filter = +<*> +<../examples/BLELed>
 
+[env:nodemcuv2-example-bleled-nowifi]
+platform = espressif8266@>=2.2
+board = nodemcuv2
+build_flags = -DIOTSA_WITHOUT_WIFI -DIOTSA_WITHOUT_HTTP -DIOTSA_WITHOUT_WEB -DIOTSA_WITHOUT_API -DIOTSA_WITHOUT_REST -DIOTSA_WITHOUT_COAP
+src_filter = +<*> +<../examples/BLELed>
+
 [env:esp32thing-example-bleled]
 platform = espressif32@>=1.11
 board = esp32thing
@@ -66,6 +72,14 @@ monitor_speed = 115200
 platform = espressif32@>=1.11
 board = lolin32
 board_build.partitions = no_ota.csv
+src_filter = +<*> +<../examples/BLELed>
+monitor_speed = 115200
+
+[env:lolin32-example-bleled-nowifi]
+platform = espressif32@>=1.11
+board = lolin32
+board_build.partitions = no_ota.csv
+build_flags = -DIOTSA_WITHOUT_WIFI -DIOTSA_WITHOUT_HTTP -DIOTSA_WITHOUT_WEB -DIOTSA_WITHOUT_API -DIOTSA_WITHOUT_REST -DIOTSA_WITHOUT_COAP
 src_filter = +<*> +<../examples/BLELed>
 monitor_speed = 115200
 
